assignment2-ver1.3/assignment2/initial/target/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "':'", "'='", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "<INVALID>", 
                     "'!'", "'+.'", "'==.'", "'Break'", "'Continue'", "'If'", 
                     "'Elif'", "'Else'", "'While'", "'For'", "'Of'", "'In'", 
                     "'Call'", "'Return'", "'Function'", "'Let'", "'Constant'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "LIT_TYPE", "NUMBER", "BOOLEAN", "CON_IDENTIFIERS", 
                      "VAR_IDENTIFIERS", "RELATION_OP", "LOGIC_BINARY_OP", 
                      "PLUS_OP", "MINUS_OP", "MULTIPLYING_OP", "LOGICAL_UNARY_OP", 
                      "PLUS_OP_STR", "RELATION_OP_STR", "BREAK", "CONTINUE", 
                      "IF", "ELIF", "ELSE", "WHILE", "FOR", "OF", "IN", 
                      "CALL", "RETURN", "FUNCTION", "LET", "CONSTANT", "STRINGLIT", 
                      "SEP", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_declares = 1
    RULE_var_declare = 2
    RULE_normal_declare = 3
    RULE_var_list = 4
    RULE_var_part = 5
    RULE_var_normal = 6
    RULE_const_declare = 7
    RULE_var_list_const = 8
    RULE_var_part_const = 9
    RULE_var_const = 10
    RULE_var = 11
    RULE_function_declare = 12
    RULE_parameters = 13
    RULE_param_list = 14
    RULE_func_body = 15
    RULE_func_body_stm = 16
    RULE_stm = 17
    RULE_assign_stm = 18
    RULE_idx_key_exp = 19
    RULE_index_op = 20
    RULE_index = 21
    RULE_key_op = 22
    RULE_if_stm = 23
    RULE_stm_else_if = 24
    RULE_for_stm = 25
    RULE_for_in = 26
    RULE_for_of = 27
    RULE_while_stm = 28
    RULE_break_stm = 29
    RULE_continue_stm = 30
    RULE_call_stm = 31
    RULE_call = 32
    RULE_pass_param = 33
    RULE_params = 34
    RULE_param = 35
    RULE_return_stm = 36
    RULE_exp = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_exp7 = 44
    RULE_index_operator = 45
    RULE_key_operator = 46
    RULE_exp8 = 47
    RULE_operands = 48
    RULE_func_call = 49
    RULE_lit = 50
    RULE_json = 51
    RULE_key_value = 52
    RULE_array = 53
    RULE_element = 54

    ruleNames =  [ "program", "declares", "var_declare", "normal_declare", 
                   "var_list", "var_part", "var_normal", "const_declare", 
                   "var_list_const", "var_part_const", "var_const", "var", 
                   "function_declare", "parameters", "param_list", "func_body", 
                   "func_body_stm", "stm", "assign_stm", "idx_key_exp", 
                   "index_op", "index", "key_op", "if_stm", "stm_else_if", 
                   "for_stm", "for_in", "for_of", "while_stm", "break_stm", 
                   "continue_stm", "call_stm", "call", "pass_param", "params", 
                   "param", "return_stm", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "index_operator", "key_operator", 
                   "exp8", "operands", "func_call", "lit", "json", "key_value", 
                   "array", "element" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    COMMENT=11
    LIT_TYPE=12
    NUMBER=13
    BOOLEAN=14
    CON_IDENTIFIERS=15
    VAR_IDENTIFIERS=16
    RELATION_OP=17
    LOGIC_BINARY_OP=18
    PLUS_OP=19
    MINUS_OP=20
    MULTIPLYING_OP=21
    LOGICAL_UNARY_OP=22
    PLUS_OP_STR=23
    RELATION_OP_STR=24
    BREAK=25
    CONTINUE=26
    IF=27
    ELIF=28
    ELSE=29
    WHILE=30
    FOR=31
    OF=32
    IN=33
    CALL=34
    RETURN=35
    FUNCTION=36
    LET=37
    CONSTANT=38
    STRINGLIT=39
    SEP=40
    WS=41
    ERROR_CHAR=42
    UNCLOSE_STRING=43
    ILLEGAL_ESCAPE=44
    UNTERMINATED_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def declares(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.DeclaresContext)
            else:
                return self.getTypedRuleContext(CSELParser.DeclaresContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0):
                self.state = 110
                self.declares()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def function_declare(self):
            return self.getTypedRuleContext(CSELParser.Function_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_declares

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclares" ):
                return visitor.visitDeclares(self)
            else:
                return visitor.visitChildren(self)




    def declares(self):

        localctx = CSELParser.DeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declares)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET, CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.var_declare()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.function_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_declare(self):
            return self.getTypedRuleContext(CSELParser.Normal_declareContext,0)


        def const_declare(self):
            return self.getTypedRuleContext(CSELParser.Const_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = CSELParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.normal_declare()
                pass
            elif token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.const_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def var_list(self):
            return self.getTypedRuleContext(CSELParser.Var_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_normal_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_declare" ):
                return visitor.visitNormal_declare(self)
            else:
                return visitor.visitChildren(self)




    def normal_declare(self):

        localctx = CSELParser.Normal_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_normal_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(CSELParser.LET)
            self.state = 127
            self.var_list()
            self.state = 128
            self.match(CSELParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_partContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_partContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = CSELParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.var_part()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.T__1:
                self.state = 131
                self.match(CSELParser.T__1)
                self.state = 132
                self.var_part()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_normal(self):
            return self.getTypedRuleContext(CSELParser.Var_normalContext,0)


        def LIT_TYPE(self):
            return self.getToken(CSELParser.LIT_TYPE, 0)

        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_part" ):
                return visitor.visitVar_part(self)
            else:
                return visitor.visitChildren(self)




    def var_part(self):

        localctx = CSELParser.Var_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.var_normal()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__2:
                self.state = 139
                self.match(CSELParser.T__2)
                self.state = 140
                self.match(CSELParser.LIT_TYPE)


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__3:
                self.state = 143
                self.match(CSELParser.T__3)
                self.state = 144
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_normalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_IDENTIFIERS(self):
            return self.getToken(CSELParser.VAR_IDENTIFIERS, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_normal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_normal" ):
                return visitor.visitVar_normal(self)
            else:
                return visitor.visitChildren(self)




    def var_normal(self):

        localctx = CSELParser.Var_normalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_normal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CSELParser.VAR_IDENTIFIERS)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__4:
                self.state = 148
                self.match(CSELParser.T__4)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.T__4) | (1 << CSELParser.T__6) | (1 << CSELParser.T__8) | (1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.CON_IDENTIFIERS) | (1 << CSELParser.VAR_IDENTIFIERS) | (1 << CSELParser.MINUS_OP) | (1 << CSELParser.LOGICAL_UNARY_OP) | (1 << CSELParser.CALL) | (1 << CSELParser.STRINGLIT))) != 0):
                    self.state = 149
                    self.exp()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CSELParser.T__1:
                        self.state = 150
                        self.match(CSELParser.T__1)
                        self.state = 151
                        self.exp()
                        self.state = 156
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 159
                self.match(CSELParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def var_list_const(self):
            return self.getTypedRuleContext(CSELParser.Var_list_constContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_const_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_declare" ):
                return visitor.visitConst_declare(self)
            else:
                return visitor.visitChildren(self)




    def const_declare(self):

        localctx = CSELParser.Const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_const_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CSELParser.CONSTANT)
            self.state = 163
            self.var_list_const()
            self.state = 164
            self.match(CSELParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_list_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_part_const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_part_constContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_part_constContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_list_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list_const" ):
                return visitor.visitVar_list_const(self)
            else:
                return visitor.visitChildren(self)




    def var_list_const(self):

        localctx = CSELParser.Var_list_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_list_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.var_part_const()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.T__1:
                self.state = 167
                self.match(CSELParser.T__1)
                self.state = 168
                self.var_part_const()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_part_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_const(self):
            return self.getTypedRuleContext(CSELParser.Var_constContext,0)


        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def LIT_TYPE(self):
            return self.getToken(CSELParser.LIT_TYPE, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var_part_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_part_const" ):
                return visitor.visitVar_part_const(self)
            else:
                return visitor.visitChildren(self)




    def var_part_const(self):

        localctx = CSELParser.Var_part_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_part_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.var_const()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__2:
                self.state = 175
                self.match(CSELParser.T__2)
                self.state = 176
                self.match(CSELParser.LIT_TYPE)


            self.state = 179
            self.match(CSELParser.T__3)
            self.state = 180
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CON_IDENTIFIERS(self):
            return self.getToken(CSELParser.CON_IDENTIFIERS, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_const" ):
                return visitor.visitVar_const(self)
            else:
                return visitor.visitChildren(self)




    def var_const(self):

        localctx = CSELParser.Var_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(CSELParser.CON_IDENTIFIERS)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__4:
                self.state = 183
                self.match(CSELParser.T__4)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.T__4) | (1 << CSELParser.T__6) | (1 << CSELParser.T__8) | (1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.CON_IDENTIFIERS) | (1 << CSELParser.VAR_IDENTIFIERS) | (1 << CSELParser.MINUS_OP) | (1 << CSELParser.LOGICAL_UNARY_OP) | (1 << CSELParser.CALL) | (1 << CSELParser.STRINGLIT))) != 0):
                    self.state = 184
                    self.exp()
                    self.state = 189
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CSELParser.T__1:
                        self.state = 185
                        self.match(CSELParser.T__1)
                        self.state = 186
                        self.exp()
                        self.state = 191
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 194
                self.match(CSELParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_normal(self):
            return self.getTypedRuleContext(CSELParser.Var_normalContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = CSELParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.var_normal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def VAR_IDENTIFIERS(self):
            return self.getToken(CSELParser.VAR_IDENTIFIERS, 0)

        def parameters(self):
            return self.getTypedRuleContext(CSELParser.ParametersContext,0)


        def func_body(self):
            return self.getTypedRuleContext(CSELParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_function_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = CSELParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_function_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(CSELParser.FUNCTION)
            self.state = 200
            self.match(CSELParser.VAR_IDENTIFIERS)
            self.state = 201
            self.parameters()
            self.state = 202
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list(self):
            return self.getTypedRuleContext(CSELParser.Param_listContext,0)

